tests/invalid/Parsing_Invalid_21.whiley
function f() -> (int r):
    int i = 0
    //
    while(i < 10):
       int x = 0
       i = i + 1
    //
    return x